assets/styles/arsenal/_list-view.scss
.arsenal-list-view {
    display: flex;
    width: 100vw;
    height: 100vh;

    .background {
        position: absolute;
        z-index: -2;
        margin: 0px;
        width: 100vw;
        height: 100vh;
        background-size: 40px 40px;
        background-image: radial-gradient(circle, $arsenal-grid-color 1px, rgba(0, 0, 0, 0) 1px);
        background-color: $arsenal-background-color;
    }

    .list-container {
        padding: 5px 5px 5px 5px;
        width: 50%;
        
        .panel {
            display: flex;
            flex-direction: column;
            background-color: $background;
            border: 1px solid $border-color;
            overflow-y: auto;
            width: 100%;
            height: 100%;

            @include scrollbar(0.3rem);

            & > .title {
                padding: 0.15rem;
                background-color: $background-200;
                font-weight: 500;
                font-size: 1.3rem;
                text-align: center;
                margin-bottom: 1px;
            }
        }
    }


    .info-container {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        width: 50%;
        padding-right: 5px;

        .info, .center-options {
            width: 100%;
        }

        .preview {
            position: absolute;
            z-index: -1;
            width: 50%;
            height: 100%;
            padding: 3rem;
            display: flex;
            justify-content: center;
            align-items: center;

            img {
                height: 100%;
                margin: 0;
            }
        }
    }

    @import "list-category";
    @import "list-item";
}

